SERVER-76799 Update precision of ClientOutOfLineExecutor timer